--- a/sec1AppCounter/lesson12.html
+++ b/sec1AppCounter/lesson12.html
@@ -6,6 +6,23 @@
     <title>Set the count to zero</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        body{
+            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 80px;
+        }
+
+        .container{
+            margin: 0 auto;
+            background-color: lightgray;
+            width: 500px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+        }
         h2{
             font-size: 50px;
             margin-top: 0;
